2009-12-10  Christos Zoulas <christos@zoulas.com>

	* Fix mntfs related lookup/(un)mount race conditions, by
	  introducing a new structure linking an mntfs to a node.
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

	* We have to free the buffers allocated by the XDR routines when
	  decoding the mount response after copying them to their final place.
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

2009-12-09  Christos Zoulas <christos@zoulas.com>

	* Free continuation in amfs_retry() if we don't call amfs_bgmount()
	  Normally it's amfs_bgmount() which frees the continuation. However, if
	  the mount is already in progress and we're in amfs_retry() for another
	  node we don't try mounting the filesystem once again. Still, we have
	  to free the continuation as we won't get called again and thus would
	  leak the continuation structure and our am_loc references.
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

	* Fix use-after-free and double free of mntfs private data
	  ops_nfs.c(nfs_init) does not clear private data pointer after free().
	  This leads to use-after-free and double free in case mount() fails.
	  (found by valgrind)
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

2009-11-23  Christos Zoulas <christos@zoulas.com>

	* The temporary filename buffer was leaked in lock_mtab().
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

2009-10-27  Christos Zoulas <christos@zoulas.com>

	* Deal with errno.h->sys/errno.h better

2009-10-26  Christos Zoulas <christos@zoulas.com>

	* Fix issue with autoconf 2.63

	* Fix compile warnings for gcc-4.4.x

2009-04-15  Christos Zoulas <christos@zoulas.com>

	* Share the LDAP connection between different maps to save resources
	  on the LDAP server. (Olaf Flebbe <o.flebbe@science-computing.de>)

2009-03-20  Christos Zoulas <christos@zoulas.com>

	* Fix largefile re-definitions

	* Fix compilation error caused in previous patch
